nextcloud-aks/helm-ingress/configs/ingress-nextcloud.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - "${NEXTCLOUD_INGRESS_HOSTNAME}"
      secretName: nextcloud-tls-certificate
  rules:
    - host: "${NEXTCLOUD_INGRESS_HOSTNAME}"
      http:
        paths:
          - path: /
            backend:
              serviceName: service-nextcloud
              servicePort: 80
